   * validate_outputTarget() :
     + check whether or not parent directory of output file exists
     + check whether or not the output file can be overwritten (if existing)
 * IntaRNA/general :
   * E_precisionEpsilon : now = sqrt(numeric_limits<E_type>::min())
     (was 1000*numeric_limits<E_type>::epsilon(), which was much too large)
 * IntaRNA/AccessibilityVrna :
   * callbackForStorage() :
     * undo last change, ie. check for 0-pUvalues now again via '==' instead of
       E_equal

171122 Martin Raden :
 * README.md :
   + discussion and examples for range-based constraint encoding
 * tests/AccessibilityConstraint :
   + test for range-based encoding parsing
 * IntaRNA/IndexRangeList :
   + regexString : string encoding of regex without start/end matching to be
     used in other regex encodings
 * IntaRNA/AccessibilityConstraint :
   + dotBracket_constraints : list of constraint encodings
   + regionIndexList : regular expression string that matches the region list
     for a single constraint encoding
   + regex : overall regex that matches both dotBracketAlphabet as well as
     range-based encodings
   + operator << : prints the constraint in range-based encoding
   * construction :
     + length now mandatory since not necessarily available via constraint 
       string encoding length
     + parsing of range-based encoding with according error messages
 * bin/CommandLineParsing :
   * get*Accessibility():
     + constraint parsing now encapsulated by try-catch to report dedicated
       error messages for query/target encodings
   + *AccConstr parameter description extended with range-based encoding
   * validate_structureConstraintArgument() :
     - obsolete structure check removed
     * validation now via regex

171117 Martin Raden :
 * bin/CommandLineParsing :
   * unify input error handling via throw
   + check if accessibility available for RegionLenMax-based decomposition
   * validate_*AccConstr() :
     - check that not in plfold-based mode